Fix search result colors in dark mode

--- a/_webpack/stylesheets/_dark.scss
+++ b/_webpack/stylesheets/_dark.scss
@@ -118,7 +118,15 @@ body.dark {
 
       a {
         color: white;
-        @include darkLink($darkSecondary, $darkBack);
+        transition: none;
+        
+        &:hover {
+          background-color: $champagne;
+
+          &::before {
+            color: white;
+          }
+        }
       }
     }
 
