--- a/_webpack/stylesheets/_variables.scss
+++ b/_webpack/stylesheets/_variables.scss
@@ -2,6 +2,8 @@
 
 $linkColor: #9C27B0;
 $pinky: #ff94c2;
+$pinkLight: #ffc1dc;
+$champagne: #b75680;
 $smallMobileW: 480px;
 $mobileW: 600px;
 $midScreenW: 1024px;
