--- a/_webpack/stylesheets/custom.scss
+++ b/_webpack/stylesheets/custom.scss
@@ -272,7 +272,6 @@ main {
 
       a {
         color: #666;
-        transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
         &:hover {
           color: $linkColor
